[API] Added pageable/sortable search endpoint [API] Added ability to favorite/unfavorite listings